[gd_scene load_steps=4 format=2]

[ext_resource path="res://scn/ConveyorBelt.gd" type="Script" id=1]
[ext_resource path="res://img/conveyor.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 650 )

[node name="ConveyorBelt" type="Node2D"]
script = ExtResource( 1 )

[node name="BeltOne" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="BeltTwo" type="Sprite" parent="."]
position = Vector2( 0, 324 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="BeltThree" type="Sprite" parent="."]
position = Vector2( 0, 648 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="BeltFour" type="Sprite" parent="."]
position = Vector2( 0, 972 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 486 )
shape = SubResource( 1 )
